--- a/index.html
+++ b/index.html
@@ -263,8 +263,7 @@
         </p>
         <p><span>Phone:</span> <a href="tel:+919687859798">+919687859798</a></p>
         <p>
-          <span>Address:</span> girls school, Shilpan Towers, Near, Sadhu
-          Vasvani Rd, Rajkot, Gujarat 360005
+          <span>Address:</span> Silpan towers, near Sadhuvasvani girls school,shadhuvasvani road, Rajkot
         </p>
         <p><span>Address:</span> Char dham, Jodiya, Gujarat 361250</p>
       </div>
