--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
     </section>
 
     <section class="product fade-in" id="product">
+      <div class="rotating-text">
+        <p>We Take Orders for Any Function - Birthdays, Weddings, Corporate Events, and More!</p>
+      </div>
       <div class="prdtitle">
         <h1>Our Products:</h1>
       </div>
@@ -60,7 +63,8 @@
       <div class="container">
         <div class="prdlist">
           <div class="product-item" id="product1">
-            <img src="product1.jpg" alt="Product 1" />
+            <img src="rajbhog.jpg" alt="Product 1" />
+            <h2>Rajbhog</h2>
             <div class="product-details">
               <h2>Rajbhog</h2>
               <table>
@@ -84,7 +88,8 @@
             </div>
           </div>
           <div class="product-item" id="product2">
-            <img src="product2.jpg" alt="Product 2" />
+            <img src="kesharpista.jpg" alt="Product 2" />
+            <h2>Keshar-Pista</h2>
             <div class="product-details">
               <h2>Keshar-Pista</h2>
               <table>
@@ -109,7 +114,8 @@
             </div>
           </div>
           <div class="product-item" id="product3">
-            <img src="product3.jpg" alt="Product 3" />
+            <img src="ganeshspecial.jpg" alt="Product 3" />
+            <h2>Ganesh-Special</h2>
             <div class="product-details">
               <h2>Ganesh-Special</h2>
               <table>
@@ -141,6 +147,7 @@
         <div class="prdlist">
           <div class="product-item" id="product4">
             <img src="product4.jpg" alt="Product 4" />
+            <h2>Fruit</h2>
             <div class="product-details">
               <h2>Fruit</h2>
               <table>
@@ -165,6 +172,7 @@
           </div>
           <div class="product-item" id="product5">
             <img src="product5.jpg" alt="Product 5" />
+            <h2>Keshar</h2>
             <div class="product-details">
               <h2>Keshar</h2>
               <table>
@@ -263,7 +271,8 @@
         </p>
         <p><span>Phone:</span> <a href="tel:+919687859798">+919687859798</a></p>
         <p>
-          <span>Address:</span> Silpan towers, near Sadhuvasvani girls school,shadhuvasvani road, Rajkot
+          <span>Address:</span> girls school, Shilpan Towers, Near, Sadhu
+          Vasvani Rd, Rajkot, Gujarat 360005
         </p>
         <p><span>Address:</span> Char dham, Jodiya, Gujarat 361250</p>
       </div>
